--- a/frontend/src/scss/abstracts/_breakpoints.scss
+++ b/frontend/src/scss/abstracts/_breakpoints.scss
@@ -1,4 +1,6 @@
-// small - 576px
-// medium - 768px
-// large - 1440px
-$breakpoints: (small: 36em, medium: 48em, large: 90em);
+// sm - 576px
+// md - 768px
+// lg - 992px
+// xl - 1200px
+// xxl - 1440px
+$breakpoints: (sm: 36em, md: 48em, lg: 62em, xl: 75em, xxl: 90em);
