--- a/frontend/src/scss/theme/_navbar.scss
+++ b/frontend/src/scss/theme/_navbar.scss
@@ -1,4 +1,3 @@
 @use '../abstracts' as *;
 
 $navbar-padding-y: em(23);
-$navbar-brand-margin-end: rem(31);
